# Super-Claude

./: .gitignore  AGENT_STATE.md  AUDIT_REPORT.md  CHECKLIST.md  CLAUDE.md  COMPACTION_PROTOCOL.md  README.md  SUPER_REPO_CONTEXT.md  setup.sh  super_repo_tracker.jsx
.claude/: settings.json
.claude/agents/: architect.md  critic.md  executor.md  interviewer.md  planner.md  release-manager.md  reviewer.md  tester.md
.claude/commands/: architect.md  build.md  full-pipeline.md  idea.md  plan.md  ship.md  test.md
.claude/hooks/: post-tool-use.js  pre-tool-use.js  session-start.js  stop.js  test-hooks.sh  test-report.txt
_prompts/: SESSION_1_FIX_DISCREPANCIES.md  SESSION_2_OH_MY_CLAUDECODE.md  SESSION_3_BEST_PRACTICE.md  SESSION_4_CLAUDE_HOWTO.md  SESSION_5_CLAW_CODE.md  SESSION_6A_CS_DATA_STRUCTURES_ALGORITHMS.md  SESSION_6B_CS_SYSTEM_DESIGN_PATTERNS.md
docs/: guide.md
knowledge/claude-code-patterns/: agent-design.md  context-management.md  hook-patterns.md  prompt-patterns.md  skill-design.md  team-coordination.md
knowledge/cs-fundamentals/: algorithms.md  data-structures.md  design-patterns.md  system-design.md
knowledge/harness-internals/: context-window.md  runtime-behavior.md  tool-orchestration.md
pipeline/01-idea/: interview-template.md  output-spec.md
pipeline/02-plan/: output-spec.md  (+2 more)
templates/api-service/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
templates/api-service/alembic/: env.py
templates/api-service/app/: config.py  database.py  main.py
templates/api-service/app/api/: health.py
templates/api-service/app/models/: __init__.py
templates/api-service/tests/: test_health.py
templates/cli-tool/: .gitignore  CLAUDE.md  README.md  pyproject.toml
templates/cli-tool/src/cli_tool/: main.py  utils.py
templates/cli-tool/src/cli_tool/commands/: greet.py
templates/cli-tool/tests/: test_cli.py
templates/full-stack/backend/: .env.example  pyproject.toml
templates/full-stack/backend/app/: config.py  database.py  main.py
templates/full-stack/backend/app/api/: health.py
templates/full-stack/backend/app/models/: base.py
tests/: e2e-dry-run.sh
(+49 files in other folders)
